--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <DOCTYPE html>
 <html>
 <head>
-  <title>My trial/title
+  <meta name="insight-app-sec-validation" content="8d0b0d54-191b-48a0-aa14-4176788b61c5">
+  <title>My trial</title>
 </head>
 <body>
 
